# webgameengine

./: .gitattributes  .gitignore  .npmignore  CHANGELOG.md  README.md  checkversion.js  clean.js  index.html  index.ts  package-lock.json  package.json  tsconfig.json
.samengine/: samfile
crates/fluaterm/: Cargo.toml  LICENSE  README.md
crates/fluaterm/src/: lib.rs
crates/sakeparser/: Cargo.toml
desktop-wails/: go.mod  main.go  wails.json
desktop-wails/frontend/: index.html  package-lock.json
desktop/webview2/: .gitignore  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  samengine-desktop.csproj  samengine-desktop.slnx
docs/: Api.md  Build.md  CHANGELOG.md  Config.md  Get-Started.md  README.md  linksaver.md  samfile.md
engine/: core.ts  html.ts  index.ts  input.ts  logger.ts  renderer.ts  save.ts  texture.ts
engine/sound/: audioplayer.ts
engine/types/: color.ts  index.ts  rectangle.test.ts  rectangle.ts  vector2d.test.ts  vector2d.ts  vector3d.ts
engine/utils/: index.ts  jsonc-parser.test.ts  utils.ts
game/: main.ts
samengine-build/: README.md  package-lock.json  package.json  tsconfig.json
samengine-build/src/: buildconfig.ts  buildhelper.ts  exporthtml.ts  getversion.ts  index.ts
samengine-cli/: README.md  package.json
samengine-cli/src/: buildinfos.ts  linksaver.ts
scripts/: preweb.js
src/: html.ts  index.ts  input.ts  keys.ts  logger.ts  renderer.ts  save.ts  texture.ts
src/physics/: collision.ts  physicsEngine.ts
src/samegui/: index.ts
src/sound/: audioplayer.ts  index.ts
tool/: Cargo.toml
tool/src/: linksaver.rs  main.rs
tools/: build.ts  index.ts
web/: next.config.ts  package.json
(+48 files in other folders)
