[package]
name = "tool"
version = "0.1.0"
edition = "2024"

[dependencies]
fluaterm = "0.2.2"
sakeparser = { path = "../crates/sakeparser" }

[profile.release]
opt-level = 3       # 0 -> no optimizing, 3 -> max speed
lto = "fat"         # oder "thin" für schnelleren Build
codegen-units = 1   # bessere Optimierung, aber langsamerer Compile
panic = "abort"     # spart etwas Platz, leicht schneller
strip = true        # entfernt Debug-Symbole (optional)
debug = false
incremental = false
#inherits = "release"
